--- a/public/views/correlation.html
+++ b/public/views/correlation.html
@@ -26,7 +26,7 @@
 
   <!-- NAVBAR NO TOPO -->
  <nav class="navbar navbar-expand-lg navbar-light" >
-<a class="navbar-brand logo-title" href="#">SOLFTITEC</a>
+<a class="navbar-brand logo-title" href="#">SOLFTEC</a>
   <div class="collapse navbar-collapse show">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item"><a class="nav-link" href="descritiva.html">Estatística Descritiva</a></li>
