--- a/public/views/probability.html
+++ b/public/views/probability.html
@@ -9,12 +9,14 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/probability.css">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
 
   <!-- NAVBAR NO TOPO -->
   <nav class="navbar navbar-expand-lg navbar-light">
-    <a class="navbar-brand logo-title" href="#">SOLFTITEC</a>
+    <a class="navbar-brand logo-title" href="#">SOLFTEC</a>
     <div class="collapse navbar-collapse show">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item"><a class="nav-link" href="descritiva.html">Estatística Descritiva</a></li>
